--- a/src/wp-content/themes/Quark-boletim/style.css
+++ b/src/wp-content/themes/Quark-boletim/style.css
@@ -1383,17 +1383,17 @@ label {
 }
 #aside-menu {
   background-color: rgba(51, 33, 33, 1) !important;
-  display: none;
-  float: right;
   overflow: hidden;
   position: absolute;
-  right: 0;
+  right: -350px;
   top: 0;
-  min-width: 280px;
+  width: 350px;
   z-index: 0;
+  transition: right linear 0.5s;
 }
 #aside-menu.menu-open {
   display: block;
+  right: 0;
   width: 350px;
   z-index: 999;
 }
